--- a/Sopra/WebContent/benutzerAnlegen.xhtml
+++ b/Sopra/WebContent/benutzerAnlegen.xhtml
@@ -22,7 +22,7 @@
 						<h:panelGroup styleClass="text-infoBenutzerAnlegen ueberschriftAufzaehlung">Passwort:</h:panelGroup>
 						<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAnlegen"><h:inputSecret></h:inputSecret></h:panelGroup>
 						<br class="naechsteZeile"/>
-						<h:panelGroup styleClass="text-infoBenutzerAnlegen ueberschriftAufzaehlung">Passwort bestätigen:</h:panelGroup>
+						<h:panelGroup styleClass="text-infoBenutzerAnlegen ueberschriftAufzaehlung">Passwort best&auml;tigen:</h:panelGroup>
 						<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAnlegen"><h:inputSecret></h:inputSecret></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoBenutzerAnlegen ueberschriftAufzaehlung">E-Mail:</h:panelGroup>
@@ -43,7 +43,7 @@
 						<br class="naechsteZeile2"/>
 						<br class="naechsteZeile2"/>
 						<h:commandButton value="Anlegen" styleClass = "buttonAnordnung"/>
-						<h:button value="Abbrechen"/>
+						<h:button value="Abbrechen" outcome="login"/>
 					</h:panelGroup>
 				</h:panelGroup>
 			</h:panelGroup>
