--- a/Sopra/WebContent/benutzerdatenAendern.xhtml
+++ b/Sopra/WebContent/benutzerdatenAendern.xhtml
@@ -29,7 +29,7 @@
 						<br class="naechsteZeile2"/>
 						<br class="naechsteZeile2"/>
 						<h:commandButton value="&Auml;ndern" styleClass = "buttonAnordnung"/>
-						<h:button value="Abbrechen"/>
+						<h:button value="Abbrechen" outcome="login"/>
 					</h:panelGroup>
 				</h:panelGroup>
 			</h:panelGroup>
