--- a/Sopra/WebContent/modulAendern.xhtml
+++ b/Sopra/WebContent/modulAendern.xhtml
@@ -9,23 +9,16 @@
 <ui:composition template="/WEB-INF/templates/BasicTemplate.xhtml">
 	
 	<ui:define name="seitenbereich">
-	<h:panelGroup layout="block" styleClass = "seitenbereich">
+	   		<h:panelGroup layout="block" styleClass = "seitenbereich">
 			<h:panelGroup layout="block" styleClass = "hauptfenster">
-				<h1 class = "ueberschrift">Passwort vergessen</h1>
-				<p>Ihre E-Mail Adresse:</p>
+				<h1 class = "ueberschrift">Modul &auml;ndern</h1>
 				<h:panelGroup layout="block" styleClass="top-nav">
 					<h:panelGroup layout="block" styleClass = "benutzerdatenAendern">
-						<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">E-Mail Adresse:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputText></h:inputText></h:panelGroup>
-						<br class="naechsteZeile"/>
-						<br class="naechsteZeile"/>
-						<br class="naechsteZeile"/>
-						<h:commandButton styleClass = "buttonAnordnung" value="Abschicken"/>
-						<h:button value="Abbrechen" outcome="login"/>
+						<p>Modul &auml;ndern :-)</p>
 					</h:panelGroup>
 				</h:panelGroup>
 			</h:panelGroup>
-	</h:panelGroup>	
+		</h:panelGroup>
 	</ui:define>
 	
 </ui:composition>
