--- a/Sopra/WebContent/modulsuche.xhtml
+++ b/Sopra/WebContent/modulsuche.xhtml
@@ -82,7 +82,7 @@
 						<h:panelGroup layout="block" styleClass="eingabeDiv2Modulsuche"><h:inputText value="#{modelBean.modulName}"/></h:panelGroup>
 						<br class="naechsteZeile2"/>
 						<br class="naechsteZeile2"/>
-						<h:button value="Abbrechen"/>
+						<h:button value="Abbrechen" outcome="login"/>
 						<h:commandButton value="Suchen" styleClass = "buttonAnordnung" action= "#{modelBean.sucheModul}"/>
 					</h:panelGroup>
 				</h:panelGroup>
