--- a/Sopra/WebContent/benutzerLoeschen.xhtml
+++ b/Sopra/WebContent/benutzerLoeschen.xhtml
@@ -11,20 +11,20 @@
 <ui:composition template="/WEB-INF/templates/BasicTemplate.xhtml">
 	<ui:define name="seitenbereich">
 		<h:panelGroup layout="block" styleClass = "seitenbereich">
-			<h:panelGroup layout="block" styleClass = "hauptfensterLoeschen">
+			<h:panelGroup layout="block" styleClass = "hauptfenster">
 			<h1 class = "ueberschrift">Benutzer l&ouml;schen</h1>
 				<h:panelGroup layout="block" styleClass="top-nav">
 					<h:panelGroup layout="block" styleClass = "loeschen"> 
 						<h:form>
 							<h:selectManyCheckbox id="fehler" value="#{loesch.selectedUsers}"  required="true" readonly="false" 
-								requiredMessage="wähle mindenstens einen Benutzer aus" layout="pageDirection" styleClass="ueberschriftAufzaehlung">
+								requiredMessage="w&auml;hle mindenstens einen Benutzer aus" layout="pageDirection" styleClass="ueberschriftAufzaehlung">
 	   							<f:selectItems value="#{loesch.users}" />
 	   						</h:selectManyCheckbox>
 	   						<h:message for="fehler" styleClass="error"/>
 	   						<br />
 		   					<br class="naechsteZeile2"/>	
-							<h:commandButton action="#{loesch.benutzerLoeschen}" value="Löschen" styleClass = "buttonAnordnung"/>
-							<h:button value="Abbrechen"/>
+							<h:commandButton action="#{loesch.benutzerLoeschen}" value="L&ouml;schen" styleClass = "buttonAnordnung"/>
+							<h:button value="Abbrechen" outcome="login"/>
 						</h:form>
 					</h:panelGroup>	
 				</h:panelGroup>
