--- a/Sopra/WebContent/login.xhtml
+++ b/Sopra/WebContent/login.xhtml
@@ -11,10 +11,9 @@
 	<ui:define name="seitenbereich" styleClass="seitenbereich">
 	<h:panelGroup layout="block" styleClass="seitenbereich">
 		<h:form>
-			<h:commandButton value="lala" action="#{userBean.makeDaUsa}"></h:commandButton>
 			<h:panelGroup layout="block" styleClass = "hauptfenster">
 				<h1 class = "ueberschrift">Modulbeschreibungen</h1>
-				<p>Bitte wählen Sie aus:</p>
+				<p>Bitte w&auml;hlen Sie aus:</p>
 				<ul class="modulListe">
 					<li class="ueberschriftAufzaehlung"><h:link>Module für Abschluss: Staatsexamen Lehramt</h:link></li>
 					<li class="ueberschriftAufzaehlung"><h:link>Module für Abschluss: Bachelor</h:link></li>
