--- a/Sopra/WebContent/modulLoeschen.xhtml
+++ b/Sopra/WebContent/modulLoeschen.xhtml
@@ -11,26 +11,25 @@
 <ui:composition template="/WEB-INF/templates/BasicTemplate.xhtml">
 	<ui:define name="seitenbereich">
 		<h:panelGroup layout="block" styleClass = "seitenbereich">
-			<h:panelGroup layout="block" styleClass = "hauptfensterLoeschen">
+			<h:panelGroup layout="block" styleClass = "hauptfenster">
 			<h1 class = "ueberschrift">Modul l&ouml;schen</h1>
 				<h:panelGroup layout="block" styleClass="top-nav">
 					<h:panelGroup layout="block" styleClass = "loeschen"> 
 						<h:form>
 							<h:selectManyCheckbox id="fehler" value="#{loesch.selectedModule}" required="true" readonly="false" 
-								requiredMessage="wähle mindenstens ein Modul aus" layout="pageDirection" styleClass="ueberschriftAufzaehlung">
+								requiredMessage="w&auml;hle mindenstens ein Modul aus" layout="pageDirection" styleClass="ueberschriftAufzaehlung">
 	   							<f:selectItems value="#{loesch.module}" />
 	   						</h:selectManyCheckbox>
 	   						<h:message for="fehler" styleClass="error"/>
 	   						<br />
 		   					<br class="naechsteZeile2"/>	
-							<h:commandButton action="#{loesch.moduleLoeschen}" value="Löschen"  styleClass = "buttonAnordnung"/>
-							<h:button value="Abbrechen"/>
+							<h:commandButton action="#{loesch.moduleLoeschen}" value="L&ouml;schen"  styleClass = "buttonAnordnung"/>
+							<h:button value="Abbrechen" outcome="login"/>
 						</h:form>
 					</h:panelGroup>	
 				</h:panelGroup>
 			</h:panelGroup>
 		</h:panelGroup>
-		
 	</ui:define>
 </ui:composition>
 </html>
