--- a/Sopra/WebContent/modulUebernehmen.xhtml
+++ b/Sopra/WebContent/modulUebernehmen.xhtml
@@ -6,31 +6,31 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 
-<!-- http://www.mkyong.com/jsf2/jsf-2-checkboxes-example/ -->
-
 <ui:composition template="/WEB-INF/templates/BasicTemplate.xhtml">
+	
 	<ui:define name="seitenbereich">
-		<h:panelGroup layout="block" styleClass = "seitenbereich">
+	   		<h:panelGroup layout="block" styleClass = "seitenbereich">
 			<h:panelGroup layout="block" styleClass = "hauptfenster">
-			<h1 class = "ueberschrift">Benachrichtigungen:</h1>
+				<h1 class = "ueberschrift">Modul &uuml;bernehmen</h1>
+				<p>Modulauswahl:</p>
 				<h:panelGroup layout="block" styleClass="top-nav">
 					<h:panelGroup layout="block" styleClass = "loeschen"> 
 						<h:form>
-							<h:selectManyCheckbox id="fehler" value="#{loesch.selectedBenachrichtigungen}" required="true" readonly="false" 
-								requiredMessage="wähle mindenstens eine Benachrichtigung zum Löschen aus" layout="pageDirection" styleClass="ueberschriftAufzaehlung">
-	   							<f:selectItems value="#{loesch.benachrichtigungen}" />
+							<h:selectManyCheckbox id="fehler" value="#{loesch.selectedModule}" required="true" readonly="false" 
+								requiredMessage="w&auml;hle mindenstens ein Modul aus" layout="pageDirection" styleClass="ueberschriftAufzaehlung">
+	   							<f:selectItems value="#{loesch.module}" />
 	   						</h:selectManyCheckbox>
 	   						<h:message for="fehler" styleClass="error"/>
 	   						<br />
 		   					<br class="naechsteZeile2"/>	
-							<h:commandButton action="#{loesch.benachrichtigungLoeschen}" value="L&ouml;schen" styleClass = "buttonAnordnung"/>
+							<h:commandButton action="#{loesch.moduleLoeschen}" value="&Uuml;bernehmen"  styleClass = "buttonAnordnung"/>
 							<h:button value="Abbrechen" outcome="login"/>
 						</h:form>
-					</h:panelGroup>	
+					</h:panelGroup>
 				</h:panelGroup>
 			</h:panelGroup>
 		</h:panelGroup>
-		
 	</ui:define>
+	
 </ui:composition>
 </html>
