--- a/Sopra/WebContent/stichtagSetzen.xhtml
+++ b/Sopra/WebContent/stichtagSetzen.xhtml
@@ -9,23 +9,21 @@
 <ui:composition template="/WEB-INF/templates/BasicTemplate.xhtml">
 	
 	<ui:define name="seitenbereich">
-	<h:panelGroup layout="block" styleClass = "seitenbereich">
+	   		<h:panelGroup layout="block" styleClass = "seitenbereich">
 			<h:panelGroup layout="block" styleClass = "hauptfenster">
-				<h1 class = "ueberschrift">Passwort vergessen</h1>
-				<p>Ihre E-Mail Adresse:</p>
+				<h1 class = "ueberschrift">Stichtag setzen</h1>
 				<h:panelGroup layout="block" styleClass="top-nav">
 					<h:panelGroup layout="block" styleClass = "benutzerdatenAendern">
-						<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">E-Mail Adresse:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputText></h:inputText></h:panelGroup>
-						<br class="naechsteZeile"/>
-						<br class="naechsteZeile"/>
-						<br class="naechsteZeile"/>
-						<h:commandButton styleClass = "buttonAnordnung" value="Abschicken"/>
-						<h:button value="Abbrechen" outcome="login"/>
+						<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">Stichtag:</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputText value="dd.mm.yyyy"></h:inputText></h:panelGroup>
+						<br />
+						<br class="naechsteZeile2"/>
+						<h:commandButton action="#{loesch.moduleLoeschen}" value="Setzen"  styleClass = "buttonAnordnung"/>
+					    <h:button value="Abbrechen" outcome="login"/>
 					</h:panelGroup>
 				</h:panelGroup>
 			</h:panelGroup>
-	</h:panelGroup>	
+		</h:panelGroup>
 	</ui:define>
 	
 </ui:composition>
