--- a/Sopra/WebContent/ModulErstellen.xhtml
+++ b/Sopra/WebContent/ModulErstellen.xhtml
@@ -14,6 +14,10 @@
 				<h:panelGroup layout="block" styleClass="top-nav">
 					<h:panelGroup layout="block" styleClass = "modulErstellen">
 					<h:form>
+						<h:outputText value="Modul erfolgreich gespeichert" rendered="#{modulErstellBean.modulErfolgreich}" style="color:green;"></h:outputText>
+						<br class="naechsteZeile"/>
+						<h:outputText value="Modul konnte nicht gespeichert werden. Bitte &uuml;berpr&uuml;fen sie ihre Eingaben" rendered="#{modulErstellenBean.modulGescheitert}" style="color:red;"></h:outputText>
+						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Modulname:</h:panelGroup>
 						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.modulname}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
