--- a/Sopra/WebContent/modulLoeschen.xhtml
+++ b/Sopra/WebContent/modulLoeschen.xhtml
@@ -18,7 +18,7 @@
 						<h:form>
 							<h:selectManyCheckbox id="fehler" value="#{loesch.selectedModule}" required="true" readonly="false" 
 								requiredMessage="w&auml;hle mindenstens ein Modul aus" layout="pageDirection" styleClass="ueberschriftAufzaehlung">
-	   							<f:selectItems value="#{loesch.module}" />
+	   							<f:selectItems value="#{loesch.module}" var="m" itemLabel="#{m.modulname}" itemValue="#{m}" />
 	   						</h:selectManyCheckbox>
 	   						<h:message for="fehler" styleClass="error"/>
 	   						<br />
