pdf und rechteverwaltung

--- a/Sopra/WebContent/benachrichtigungenLoeschen.xhtml
+++ b/Sopra/WebContent/benachrichtigungenLoeschen.xhtml
@@ -13,6 +13,7 @@
 		<h:panelGroup layout="block" styleClass = "seitenbereich">
 			<h:panelGroup layout="block" styleClass = "hauptfenster">
 			<h1 class = "ueberschrift">Benachrichtigungen:</h1>
+			<h:graphicImage value="/resources/images/brief3.gif"></h:graphicImage>
 				<h:panelGroup layout="block" styleClass="top-nav">
 					<h:panelGroup layout="block" styleClass = "loeschen"> 
 						<h:form>
