--- a/Sopra/WebContent/benutzerLoeschen.xhtml
+++ b/Sopra/WebContent/benutzerLoeschen.xhtml
@@ -15,11 +15,13 @@
 			<h1 class = "ueberschrift">Benutzer l&ouml;schen</h1>
 				<h:panelGroup layout="block" styleClass="top-nav">
 					<h:panelGroup layout="block" styleClass = "loeschen"> 
-						<h:form>
+						<h:form id="benutzer_loeschen_form">
+						
 							<h:selectManyCheckbox id="fehler" value="#{loesch.selectedUsers}"  required="true" readonly="false" 
 								requiredMessage="w&auml;hle mindenstens einen Benutzer aus" layout="pageDirection" styleClass="ueberschriftAufzaehlung">
-	   							<f:selectItems value="#{loesch.users}" var="u" itemLabel="#{u.name}, #{u.vorname}, #{u.email}" itemValue="#{u}" />
+	   							<f:selectItems value="#{loesch.users}" var="u" itemValue="#{u.email}" itemLabel="#{u.name} #{u.vorname} #{u.fakultaet} #{u.email}"  />
 	   						</h:selectManyCheckbox>
+	   						
 	   						<h:message for="fehler" styleClass="error"/>
 	   						<br />
 		   					<br class="naechsteZeile2"/>	
