--- a/Sopra/WebContent/modulErstellen.xhtml
+++ b/Sopra/WebContent/modulErstellen.xhtml
@@ -30,11 +30,11 @@
 						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.arbeitsaufwand}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
-						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Voraussetzungen F&uuml;r:</h:panelGroup>
+						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Voraussetzungen f&uuml;r:</h:panelGroup>
 						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.voraussetzungenfor}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
-						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Voraussetzungen In:</h:panelGroup>
+						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Voraussetzungen in:</h:panelGroup>
 						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.voraussetzungenin}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
@@ -51,11 +51,11 @@
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Dozenten:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="30" rows="4"  value="#{modulErstellenBean.dozenten}"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="23" rows="4"  value="#{modulErstellenBean.dozenten}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Einordnung:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="30" rows="4" value="#{modulErstellenBean.einordnung}"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="23" rows="4" value="#{modulErstellenBean.einordnung}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Englisch:</h:panelGroup>
@@ -63,19 +63,19 @@
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Grundlage f&uuml;r:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="30" rows="4" value="#{modulErstellenBean.grundlagefuer}"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="23" rows="4" value="#{modulErstellenBean.grundlagefuer}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Inhalt:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="30" rows="4" value="#{modulErstellenBean.inhalt}"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="23" rows="4" value="#{modulErstellenBean.inhalt}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Lehrformen:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="30" rows="4" value="#{modulErstellenBean.lehrformen}"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="23" rows="4" value="#{modulErstellenBean.lehrformen}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Leistungsnachweis:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="30" rows="4" value="#{modulErstellenBean.leistungsnachweis}"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="23" rows="4" value="#{modulErstellenBean.leistungsnachweis}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Leistungspunkte:</h:panelGroup>
@@ -83,11 +83,11 @@
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Lernziele:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="30" rows="4" value="#{modulErstellenBean.lernziele}"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="23" rows="4" value="#{modulErstellenBean.lernziele}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Literatur:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="30" rows="4"  value="#{modulErstellenBean.literatur}"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="23" rows="4"  value="#{modulErstellenBean.literatur}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Modulverantwortlicher:</h:panelGroup>
@@ -95,7 +95,7 @@
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Notenbildung:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="30" rows="4" value="#{modulErstellenBean.notenbildung}"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" cols="23" rows="4" value="#{modulErstellenBean.notenbildung}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Sprache:</h:panelGroup>
