--- a/Sopra/WebContent/modulhandbuch.xhtml
+++ b/Sopra/WebContent/modulhandbuch.xhtml
@@ -13,19 +13,14 @@
 		<h:panelGroup layout="block" styleClass="seitenbereich">
 			<h:panelGroup layout="block" styleClass="hauptfenster">
 				<h1 class="ueberschrift">Modulhandbuch</h1>
-
-
-
 				<h:form id="form">
-
-
 					<!-- t:tree kommt die hintergrundfarbe rein  style= "background-color: red" -->
 
 					<p:tree value="#{modulhandbuchBaumstrukturBean.root}" var="node"
 						id="tree" style="width: 1007px;">
 						<p:treeNode id="treeNode">
-							<h:link value="#{node}" id="lblNode" styleClass="baumaufbauModulhandbuch" style="color:black;" > </h:link>
-
+							<p:outputLabel value="#{node}" id="lblNode" styleClass="baumaufbauModulhandbuch" style="color:black;" > </p:outputLabel>
+							<h:link><h:graphicImage value="/resources/images/PDF_Logo.png" style=" margin-left: 15px;"></h:graphicImage></h:link>
 						</p:treeNode>
 					</p:tree>
 				</h:form>
