--- a/Sopra/WebContent/benutzerdatenAendern.xhtml
+++ b/Sopra/WebContent/benutzerdatenAendern.xhtml
@@ -29,7 +29,7 @@
 							<br class="naechsteZeile2"/>
 							<br class="naechsteZeile2"/>
 							<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">Status:</h:panelGroup>
-							<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputText value="#{benutzerAendernBean.status}"></h:inputText></h:panelGroup>
+							<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:outputText styleClass="ueberschriftAufzaehlung" value="#{benutzerAendernBean.status}"></h:outputText></h:panelGroup>
 							<br class="naechsteZeile2"/>
 							<br class="naechsteZeile2"/>
 							<br class="naechsteZeile2"/>
