--- a/Sopra/WebContent/Stellvertreterhinzufuegen.xhtml
+++ b/Sopra/WebContent/Stellvertreterhinzufuegen.xhtml
@@ -6,23 +6,24 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 
+<!-- http://www.mkyong.com/jsf2/jsf-2-checkboxes-example/ -->
+
 <ui:composition template="/WEB-INF/templates/BasicTemplate.xhtml">
-	
 	<ui:define name="seitenbereich">
-	   		<h:panelGroup layout="block" styleClass = "seitenbereich">
+		<h:panelGroup layout="block" styleClass = "seitenbereich">
 			<h:panelGroup layout="block" styleClass = "hauptfenster">
-				<h1 class = "ueberschrift">Modul weiterleiten</h1>
+			<h1 class = "ueberschrift">Stellvertreter hinzuf&uuml;gen</h1>
 				<h:panelGroup layout="block" styleClass="top-nav">
 					<h:panelGroup layout="block" styleClass = "loeschen"> 
 						<h:form>
-							<h:selectManyCheckbox id="fehler" required="true" readonly="false" 
-								requiredMessage="w&auml;hle mindenstens ein Modul aus" layout="pageDirection" styleClass="ueberschriftAufzaehlung">
-	   							<f:selectItems />
+							<h:selectManyCheckbox id="fehler" value="#{hinzufuegen.selectedUsers}" required="true" readonly="false" 
+								requiredMessage="w&auml;hle mindenstens einen Stellvertreter aus" layout="pageDirection" styleClass="ueberschriftAufzaehlung">
+	   							<f:selectItems value="#{hinzufuegen.users}" var="u" itemValue="#{u.modulid}" itemLabel="#{u.name + u.vorname + u.email}"/>
 	   						</h:selectManyCheckbox>
 	   						<h:message for="fehler" styleClass="error"/>
 	   						<br />
 		   					<br class="naechsteZeile2"/>	
-							<h:commandButton value="Weiterleiten"  styleClass = "buttonAnordnung"/>
+							<h:commandButton action="#{hinzufuegen.StellvertreterAuswaehlen}" value="hinzuf&uuml;gen"  styleClass = "buttonAnordnung"/>
 							<h:button value="Abbrechen" outcome="login"/>
 						</h:form>
 					</h:panelGroup>	
@@ -30,6 +31,5 @@
 			</h:panelGroup>
 		</h:panelGroup>
 	</ui:define>
-	
 </ui:composition>
 </html>
