--- a/Sopra/WebContent/modulAendern1.xhtml
+++ b/Sopra/WebContent/modulAendern1.xhtml
@@ -11,7 +11,7 @@
 	<ui:define name="seitenbereich">
 	   		<h:panelGroup layout="block" styleClass = "seitenbereich">
 			<h:panelGroup layout="block" styleClass = "hauptfenster">
-			<h1 class = "ueberschrift">Rechteverwaltung</h1>
+			<h1 class = "ueberschrift">Modul &auml;ndern</h1>
 				<p>Suchen Sie ein Modul aus:</p>
 						<h:form>
 							<ul class="modulListe">
