--- a/Sopra/WebContent/benutzerdatenAendern.xhtml
+++ b/Sopra/WebContent/benutzerdatenAendern.xhtml
@@ -12,7 +12,14 @@
 	   		<h:panelGroup layout="block" styleClass = "seitenbereich">
 			<h:panelGroup layout="block" styleClass = "hauptfenster">
 				<h1 class = "ueberschrift">Benutzerdaten &auml;ndern:</h1>
-				<h:panelGroup layout="block" styleClass="top-nav">
+				
+				<h:panelGroup layout="block" styleClass = "benutzerAnlegen" rendered="#{userBean.myself==null}">
+						<h1>No User, no Permission!!</h1>
+						<br class="naechsteZeile"/>
+						<h6>MWTBDLTR</h6>
+				</h:panelGroup>
+				
+				<h:panelGroup layout="block" styleClass="top-nav" rendered="#{userBean.myself!=null}">
 					<h:panelGroup layout="block" styleClass = "benutzerdatenAendern">
 						<h:form>
 							<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">altes Passwort:</h:panelGroup>
