--- a/Sopra/WebContent/modulLoeschen.xhtml
+++ b/Sopra/WebContent/modulLoeschen.xhtml
@@ -13,7 +13,22 @@
 		<h:panelGroup layout="block" styleClass = "seitenbereich">
 			<h:panelGroup layout="block" styleClass = "hauptfenster">
 			<h1 class = "ueberschrift">Modul l&ouml;schen</h1>
-				<h:panelGroup layout="block" styleClass="top-nav">
+			
+			<h:panelGroup layout="block" styleClass = "benutzerAnlegen" rendered="#{userBean.myself==null}">
+							<h1>No USER, no Permission!!</h1>
+							<br class="naechsteZeile"/>
+							<h6>MWTBDLTR</h6>
+				</h:panelGroup>
+						
+				<h:panelGroup layout="block" styleClass = "benutzerAnlegen" rendered="#{userBean.myself.rolle==3}">
+						<h1>Admin, no Permission!!</h1>
+						<br class="naechsteZeile"/>
+						<h6>MWTBDLTR</h6>
+				</h:panelGroup>
+			
+			
+			
+				<h:panelGroup layout="block" styleClass="top-nav"  rendered="#{userBean.myself!=null} and #{userBean.myself.rolle!=3}">
 					<h:panelGroup layout="block" styleClass = "loeschen"> 
 						<h:form>
 							<h:selectManyCheckbox id="fehler" value="#{loesch.selectedModule}" required="true" readonly="false" 
