--- a/Sopra/WebContent/Stellvertreterhinzufuegen.xhtml
+++ b/Sopra/WebContent/Stellvertreterhinzufuegen.xhtml
@@ -21,7 +21,7 @@
 	   							<f:selectItems value="#{stellvertreterBean.users}" var="u" itemValue="#{u.email}" itemLabel="#{u.name} #{u.vorname} #{u.fakultaet} #{u.email}"/>
 	   						</h:selectManyCheckbox>
 	   						<h:message for="fehler" styleClass="error"/>
-	   						<h:outputText value="Stellvertreter erfolgreich hinzugef&uuml;gt" rendered="#{stellvertreterBean.stellvertreterErfolgreich}" style="color:red; font-size:12px;"></h:outputText>
+	   						<h:outputText value="Stellvertreter wurde erfolgreich hinzugef&uuml;gt" rendered="#{stellvertreterBean.stellvertreterErfolgreich}" style="color:red; font-size:12px;"></h:outputText>
 	   						<br />
 		   					<br class="naechsteZeile2"/>	
 							<h:commandButton action="#{stellvertreterBean.selectStellvertreter}" value="hinzuf&uuml;gen"  styleClass = "buttonAnordnung"/>
