--- a/Sopra/WebContent/login.xhtml
+++ b/Sopra/WebContent/login.xhtml
@@ -12,7 +12,7 @@
 	<h:panelGroup layout="block" styleClass="seitenbereich">
 		<h:form>
 			<h:panelGroup layout="block" styleClass = "hauptfenster">
-				<h1 class = "ueberschrift">Modulbeschreibungen</h1>
+				<h1 class = "ueberschrift">Modul und Modulhandb&uuml;cher</h1>
 				<p>Bitte w&auml;hlen Sie aus:</p>
 				<h:form id="form">
 					<!-- t:tree kommt die hintergrundfarbe rein  style= "background-color: red" -->
